<resources>
    <string name="app_name">Preço Justo</string>
    <string name="nameProduct">Nome do Produto</string>
    <string name="typeNameProduct">Digite o nome do produto</string>
    <string name="valueProduct">Valor do Produto</string>
    <string name="typevalueProduct">Digite o valor do produto</string>
    <string name="qtdParc">Qtd. Parc.</string>
    <string name="juros">Juros (%)</string>
    <string name="btnCalculate">Calcular</string>
    <string name="btnClear">Limpar</string>

    <string name="fxNameProduct">Produto: </string>
    <string name="fxValueInitial">Valor Inicial: </string>
    <string name="fxValuePortion">Valor Parcelas: </string>
    <string name="fxTotalValue">Valor Total: </string>
    <string name="fxTotalJuros">Total de Juros: </string>
</resources>
