<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.projeto.danilosetubal.precojustoapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameProduct"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typeNameProduct"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valueProduct"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/typevalueProduct"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/qtdParc"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/juros"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="19dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="15dp"
            android:text="@string/qtdParc"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >
       <Button
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/btnCalculate"
           android:layout_weight="1"
           android:drawableLeft="@android:drawable/ic_dialog_info"
           />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnClear"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_notification_clear_all"
            />
    </LinearLayout>


</LinearLayout>
